--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="card front-face"></div>
+        </div>
+    </section>
 </body>
 </html>
