--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 <body>
     <section>
         <div class="container">
-            <div class="card front-face"></div>
+            <div class="card front-face">
+                <header>
+                    <span class="logo">
+                        <img src="images/logo.png" alt="">
+                        <h5>Master Card</h5>
+                    </span>
+                    <img src="./images/chip.png" alt="" class="chip">
+                </header>
+
+                <div class="card-details">
+                    <div class="name-number">
+                        <h6>Card Number</h6>
+                        <h5 class="number">8050 2030 3020 5040</h5>
+                        <h5 class="name">Nikhil Pahan</h5>
+                    </div>
+
+                    <div class="valid-date">
+                        <h6>Valid Thru</h6>
+                        <h5>05/28</h5>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
