--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card back-face">
+                <h6>For customer service call +917 7434 3433 or email at mastercard@gmail.com
+                </h6>
+                <span class="magnetic-strip">
+                    <div class="signature"><i>005</i></div>
+                    <h5>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ipsam ut, molestiae sed asperiores molestias!
+                    </h5>
+                </span>
+            </div>
         </div>
     </section>
 </body>
