--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
             <div class="card back-face">
                 <h6>For customer service call +917 7434 3433 or email at mastercard@gmail.com
                 </h6>
-                <span class="magnetic-strip">
+                <span class="magnetic-strip"></span>
                     <div class="signature"><i>005</i></div>
                     <h5>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ipsam ut, molestiae sed asperiores molestias!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, repellendus architecto dignissimos unde, corrupti nam similique quidem necessitatibus quis, reprehenderit deserunt ut debitis aliquid delectus ipsam sapiente minima! Perspiciatis, quae.
                     </h5>
-                </span>
             </div>
         </div>
     </section>
